--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,11 @@
 @font-face {
     font-family: 'Dosis';
     src: url('../fonts/Dosis/Dosis-Regular.ttf');
+}
 
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto/Roboto-Regular.ttf');
 }
 
 html {
@@ -23,7 +27,7 @@ body {
     margin: 20px auto;
     /* border-right: 8px solid rgba(0,0,0,0.7);
     border-left: 8px solid rgba(0,0,0,0.7); */
-    background-color: aquamarine;
+    background-color: #63bde7;
     border-radius: 8px;
     padding: 40px;
     box-shadow: 0px 1px 1px rgb(184, 184, 184);
@@ -52,6 +56,12 @@ body {
     font-family: 'Dosis';
 }
 
+/* page description */
+.title-box .description {
+    font-family: 'Roboto';
+    
+}
+
 /* bootstrap class input */
 .form-control {
     font-family: 'Verdana';
@@ -78,6 +88,7 @@ button {
 
 }
 
+/* search result text */
 #list-of-activities-box .header .title {
     text-align: center;
     font-size: 20px;
