--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,7 +106,7 @@ button {
     border: none;
     font-family: 'Dosis';
     font-weight: 700;
-    box-shadow: 0px 1px 1px rgb(184, 184, 184);
+    box-shadow: 0px 1px 1px rgb(199, 102, 202);
 
 }
 
@@ -119,19 +119,19 @@ button {
 
 /* activities box */
 .activities-box {
-    height: 250px;
+    height: 270px;
     margin-bottom: 20px;
-    border-radius: 8px;
     background: whitesmoke;
     box-shadow: 0px 1px 1px rgb(184, 184, 184);
     display: none;
-
+    overflow-y: scroll;
+    overflow-x: hidden;
+    border-radius: 8px;
 }
 
 /* ul container */
 .list-of-activities {
     padding: 8px;
-    width: 100%;
     height: 100%;;
 }
 
@@ -141,10 +141,18 @@ button {
     padding: 8px 8px;
     border-radius: 8px;
     list-style: none;
-    margin: 8px auto;
+    margin: 12px auto;
     box-shadow: 0px 1px 1px rgb(184, 184, 184);
-
+    float: left;
+    width: 100%;
+    font-size: 12px;
 }
+
+.list-of-activities li button {
+    float: right;
+    height: 100%;
+}
+
 
 /* footer */
 .footer {
