--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,12 +145,18 @@ button {
     box-shadow: 0px 1px 1px rgb(184, 184, 184);
     float: left;
     width: 100%;
-    font-size: 12px;
+    font-size: 18px;
 }
 
 .list-of-activities li button {
-    float: right;
-    height: 100%;
+    height: 20px;
+    width: 10px;
+    margin: 0px auto;
+    white-space: normal;
+}
+
+.list-of-activities li button:hover {
+    background: rgba(0, 0, 0, 0.9);
 }
 
 
